# LC_epid_data_analysis

./: .gitignore  README.md  pyproject.toml
epid_analysis/: cox_model.py
epid_analysis/data/: ICD_histology_codes.json  plco.py  seer.py  smoking_surveys.py  trial_datasets.py  uk_biobank.py
epid_analysis/plot/: colours.py  cox_model.py  seer_populations.py  seer_rates.py  seer_ratios.py  smoking_surveys.py  trial_datasets.py
